--- a/callforp.html
+++ b/callforp.html
@@ -151,45 +151,50 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 			<br><br>
 			<div class="row">
   <div class="column" style="background-color:#aaa;"><br>
-	  <center><h2 class="text-black">COMPUTING</h2><br><br><BR></center>
-    <p>&nbsp;&nbsp;🡢 Internet of Things (IoT)<BR><BR>
-&nbsp;&nbsp;🡢 Smart Cities<BR><BR>
-&nbsp;&nbsp;🡢 Digital Health, Telehealth<br><BR>
-&nbsp;&nbsp;🡢 Cluster Computing & Cloud Computing<br><BR>
-&nbsp;&nbsp;🡢 IoT in 5G Communication<br><BR>
-&nbsp;&nbsp;🡢 Mobile Computing<br><BR>
-&nbsp;&nbsp;🡢 Green Computing<br><BR>
-&nbsp;&nbsp;🡢 Soft Computing<br><BR>
-&nbsp;&nbsp;🡢 Quantum Computing<br><BR>
-&nbsp;&nbsp;🡢 Multimedia Communication over Wireless<br><BR>
-&nbsp;&nbsp;🡢 Cognitive Computing<br><BR>
-&nbsp;&nbsp;🡢 Scalable Computing<br><BR>
-&nbsp;&nbsp;🡢 Machine Learning<br><BR>
-&nbsp;&nbsp;🡢 Speech Recognition<br><BR>
-&nbsp;&nbsp;🡢 Cyber Physical Systems<br><BR>
-&nbsp;&nbsp;🡢 Machine to Machine<br><BR>
-&nbsp;&nbsp;🡢 Mobile Applications<br><BR>
+	  <center><h2 class="text-black">INTELLIGENT ALGORITHMS: RECENT DEVELOPMENTS (NOT LIMITED TO)</h2><br><br><BR></center>
+    <p>&nbsp;&nbsp;🡢Artificial Intelligence<br><br>
+&nbsp;&nbsp;🡢Artificial Neural Networks<br><br>
+&nbsp;&nbsp;🡢Machine Learning and Deep learning<br><br>
+&nbsp;&nbsp;🡢Reinforcement learning <br><br>
+&nbsp;&nbsp;🡢Autonomous agents<br><br>
+&nbsp;&nbsp;🡢Swarm intelligence<br><br>
+&nbsp;&nbsp;🡢Fuzzy systems<br><br>
+&nbsp;&nbsp;🡢Computational intelligence  <br><br>
+&nbsp;&nbsp;🡢Nature inspired algorithms<br><br>
+&nbsp;&nbsp;🡢Cognitive computing <br><br>
+&nbsp;&nbsp;🡢Big data analysis and data mining<br><br>
+&nbsp;&nbsp;🡢Game theory <br><br>
+&nbsp;&nbsp;🡢Optimization<br><br>
+&nbsp;&nbsp;🡢Cluster Computing & Cloud Computing<br><br>
+&nbsp;&nbsp;🡢Smart Mobile Computing<br><br>
+&nbsp;&nbsp;🡢Soft Computing<br><br>
+&nbsp;&nbsp;🡢Quantum Computing, Scalable Computing<br><br>
+&nbsp;&nbsp;🡢Speech Recognition<br><br>
+&nbsp;&nbsp;🡢Data fusion<br><br>
 </p>
   </div>
   <div class="column" style="background-color:#bbb;"><br>
-    <center><h2 class="text-black">COMMUNICATION</h2><br><br><BR></center>
-    <p>Signal Processing<br><BR>
-🡢 Image and Video Processing<br><BR>
-🡢 Medical Processing<br><BR>
-🡢 Wireless Communications<br><BR>
-🡢 Wireless Sensor Networks<br><BR>
-🡢 Adhoc Networks<br><BR>
-🡢 Cognitive Radio and Spectrum Management<br><BR>
-🡢 Software Defined Radio<br><BR>
-🡢 Software Defined Networks<br><BR>
-🡢 Photonics and Optical Communication<br><BR>
-🡢 Sensors and Sensors technology<br><BR>
-🡢 Satellite and Space Communications<br><BR>
-🡢 Vehicular, Underground and Underwater Networks<br><BR>
-🡢 Network Security<br><BR>
-🡢 Cryptography<br><BR>
-🡢 Physical Layer Security<br><BR>
-🡢 Network Protocols<br><BR>
+    <center><h2 class="text-black">INTELLIGENT COMMUNICATION SYSTEMS</h2><br><br><BR></center>
+    <p>
+	    &nbsp;&nbsp;🡢Internet of Things (IoT)<br><br>
+&nbsp;&nbsp;🡢5G & 6G wireless communication  <br><br>
+&nbsp;&nbsp;🡢ICT infrastructure for smart Cities<br><br>
+&nbsp;&nbsp;🡢Intelligent transportation systems <br><br>
+&nbsp;&nbsp;🡢Digital Health, Telehealth<br><br>
+&nbsp;&nbsp;🡢Smart Cyber Security<br><br>
+&nbsp;&nbsp;🡢Smart devices and Embedded systems <br><br>
+&nbsp;&nbsp;🡢Cognitive Radio and Spectrum Management<br><br>
+&nbsp;&nbsp;🡢Software Defined Radio<br><br>
+&nbsp;&nbsp;🡢Photonics and Optical Communication<br><br>
+&nbsp;&nbsp;🡢Satellite and Space Communications<br><br>
+&nbsp;&nbsp;🡢Vehicular, Underground and Underwater Networks<br><br>
+&nbsp;&nbsp;🡢Network and Data Security<br><br>
+&nbsp;&nbsp;🡢Ad Hoc Networks<br><br>
+&nbsp;&nbsp;🡢Cryptography Algorithms<br><br>
+&nbsp;&nbsp;🡢Smart antenna, beamforming<br><br>
+&nbsp;&nbsp;🡢Signal Processing, Image and Video Processing<br><br>
+&nbsp;&nbsp;🡢Networking protocols <br><br>
+
 </p>
   </div>
 </div>
