--- a/callforp.html
+++ b/callforp.html
@@ -151,7 +151,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 			<br><br>
 			<div class="row">
   <div class="column" style="background-color:#aaa;"><br>
-	  <center><h2 class="text-black">INTELLIGENT ALGORITHMS: RECENT DEVELOPMENTS (NOT LIMITED TO)</h2><br><br><BR></center>
+	  <center><h2 class="text-black">INTELLIGENT ALGORITHMS: RECENT DEVELOPMENTS</h2><br><br><BR></center>
     <p>&nbsp;&nbsp;🡢Artificial Intelligence<br><br>
 &nbsp;&nbsp;🡢Artificial Neural Networks<br><br>
 &nbsp;&nbsp;🡢Machine Learning and Deep learning<br><br>
