--- a/adcom.html
+++ b/adcom.html
@@ -4,13 +4,11 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/elements/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
+		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Meta Description -->
-		<meta name="description" content="">
+		<meta name="description" content="conference ic4e2020">
 		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
+		<meta name="keywords" content="ic4e2020, conference,ic4e-2020,ic4e,nit kurukshetra conference,INTERNATIONAL CONFERENCE ON CUTTING-EDGE TECHNOLOGIES IN COMPUTING AND  COMMUNICATION ENGINEERING  ">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
@@ -21,11 +19,12 @@
 			CSS
 			============================================= -->
 			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/nice-select.css">			
-			<link rel="stylesheet" href="css/magnific-popup.css">
 			<link rel="stylesheet" href="css/bootstrap.css">
+			<link rel="stylesheet" href="css/magnific-popup.css">
+			<link rel="stylesheet" href="css/nice-select.css">					
+			<link rel="stylesheet" href="css/animate.min.css">
+			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>
