--- a/phtog.html
+++ b/phtog.html
@@ -2,13 +2,13 @@
 	<html lang="zxx" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon-->
 		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Meta Description -->
 		<meta name="description" content="conference ic4e2020">
 		<!-- Meta Keyword -->
-		<meta name="keywords" content="ic4e2020, conference">
+		<meta name="keywords" content="ic4e2020, conference,ic4e-2020,ic4e,nit kurukshetra conference,INTERNATIONAL CONFERENCE ON CUTTING-EDGE TECHNOLOGIES IN COMPUTING AND  COMMUNICATION ENGINEERING  ">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
