--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Registration Deadline:<b style="color: red"> 15 September 2020</b></p>
 			<section>
 			<br><br><br>	
 		
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1027.8001429596584!2d76.81679094449134!3d29.947979791542398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390e3f521c4f3a71%3A0x2c82fb6d6a3d980b!2sDepartment%20of%20Electronics%20And%20Communication%20Engineering!5e0!3m2!1sen!2sin!4v1582343892637!5m2!1sen!2sin" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" maptype="satellite"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13828.423097597617!2d76.815473!3d29.947636!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x14d79f026b1ae4ec!2sNational%20Institute%20of%20Technology%2C%20Kurukshetra!5e0!3m2!1sen!2sin!4v1590056349363!5m2!1sen!2sin" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" maptype="satellite"></iframe>
 			<br><br><br><Br>
 		</section>
 		<section>
