--- a/orcom.html
+++ b/orcom.html
@@ -33,7 +33,7 @@
 			    <div class="container">
 			    	<div class="align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="img/Capture.PNG" width="196px" height="100px" alt="" title="" /></a>
+					      <a href="index.html"><img src="img/Capture.PNG" width="196px" /></a>
 				      </div><br>
 				      <bR>
 				      <nav id="nav-menu-container">
