--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@ Submit your research paper to IC4E-2020 through the Online Submission System .<b
 		</section>
 		<section>
 			<h1 class="mb-10" align="center">PUBLICATION PARTNERS</h1><br><br>
-			<center><img src="./img/springer.png" alt="""><img src="./img/inderscience.png" alt="" style="margin-left: 5%;"><img src="./img/elseiver.png" alt="" style="margin-left: 5%;"></center>
+			<center>	<img src="./img/springer.png" alt="" style="width: 20%;">
+			<img src="./img/inderscience.png" alt="" style="margin-left: 5%;widths:20% ">
+			<img src="./img/elseiver.png" alt="" style="margin-left: 5%;width: 10%"></center>
 			
 			
 				</section>
