adcom changes to bullets and font

--- a/adcom.html
+++ b/adcom.html
@@ -85,33 +85,33 @@
 			</section>		
 			<section>
 			<br><br>
-			<h1 class="text-black"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INTERNATIONAL ADVISORY COMMITTEE MEMBERS</h1>
+			<h1 class="text-black" style="margin-left: 5%;"> INTERNATIONAL ADVISORY COMMITTEE MEMBERS</h1>
 			<br><br>
-<h6 class="text-black" align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Pramod K Varshney, Syracuse University, Syracuse, NY, USA<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Prof. San Murugesan, Western Sydney University, Australia<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Prof. Carlos A. Coello Coello, CINVESTAV-IPN, Mexico City, Mexico<br><br>
+<h6 class="text-black" align="left" style="margin-left: 5%;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">• Dr. Pramod K Varshney, Syracuse University, Syracuse, NY, USA<br><br>
+ • Prof. San Murugesan, Western Sydney University, Australia<br><br>
+ • Prof. Carlos A. Coello Coello, CINVESTAV-IPN, Mexico City, Mexico<br><br>
 
 				
 				<br><br>
-				<h1 class="text-black"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NATIONAL ADVISORY COMMITTEE MEMBERS</h1>
+				<h1 class="text-black" style="margin-left: 5%"> NATIONAL ADVISORY COMMITTEE MEMBERS</h1>
 				<br><br>
-				<h6 class="text-black" align="left">
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Anand Mohan (IIT BHU )<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. N S Rajput (IIT BHU)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Amit Kumar (IIT Jodhpur)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Monika Aggarwal (IIT Delhi)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Sukumar Nandi (IIT Guwahati)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Y N Singh (IIT Kanpur)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Sudeb Das Gupta (IIT Roorkee)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Ravi Panwar (IIIT Jabalpur)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Sanjeev Sofat (PEC Chandigarh)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. J C Bansal (South Asian University New Delhi)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Ashwani Rana (NIT Hamirpur)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Rajeevan Chandel (NIT Hamirpur)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Tarun Rawat (NSIT Delhi)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Anshul Gupta (NIT Raipur)<br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dr. Amit Kumar Singh (NIT Patna)<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dr. Navneet Gupta (BITS Pilani)<br></h6>
+				<h6 class="text-black" align="left" style="margin-left:  5%;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">
+				 • Dr. Anand Mohan (IIT BHU )<br><br>
+• Dr. N S Rajput (IIT BHU)<br><br>
+• Dr. Amit Kumar (IIT Jodhpur)<br><br>
+• Dr. Monika Aggarwal (IIT Delhi)<br><br>
+• Dr. Sukumar Nandi (IIT Guwahati)<br><br>
+• Dr. Y N Singh (IIT Kanpur)<br><br>
+• Dr. Sudeb Das Gupta (IIT Roorkee)<br><br>
+• Dr. Ravi Panwar (IIIT Jabalpur)<br><br>
+• Dr. Sanjeev Sofat (PEC Chandigarh)<br><br>
+• Dr. J C Bansal (South Asian University New Delhi)<br><br>
+•  Dr. Ashwani Rana (NIT Hamirpur)<br><br>
+•  Dr. Rajeevan Chandel (NIT Hamirpur)<br><br>
+•  Dr. Tarun Rawat (NSIT Delhi)<br><br>
+•  Dr. Anshul Gupta (NIT Raipur)<br><br>
+• Dr. Amit Kumar Singh (NIT Patna)<br><br>
+				• Dr. Navneet Gupta (BITS Pilani)<br></h6>
 <br><br><br><br>
 			</section>
 		<section><div class="footer"><p>© Copyrights IC4E 2020. All Rights Reserved</p></div></section>
