--- a/orcom.html
+++ b/orcom.html
@@ -104,7 +104,7 @@
   <div class="column">
     <div class="card">
      <br>
-      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=208"><img src="img/brahmajit.jpg" alt="Jane" width="30%" style="border-radius: 50%"></a></center><br>
+      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=208"><img src="img/brahmajit.jpg" alt="Jane" width="250px" height="250px" style="border-radius: 50%"></a></center><br>
       <div class="container">
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Dr. Brahmajit Singh</h2>
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Professor, ECED</h2>
@@ -118,7 +118,7 @@
   <div class="column">
     <div class="card">
      <br>
-      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=249"><img src="img/pj.jpg" alt="Jane" width="30%" style="border-radius: 50%"></a></center><br>
+      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=249"><img src="img/pj.jpg" alt="Jane" width="250px" height="250px" style="border-radius: 50%"></a></center><br>
       <div class="container">
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Dr. Poonam Jindal</h2>
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Assistant Professor, ECED</h2>
@@ -132,7 +132,7 @@
   <div class="column">
     <div class="card">
      <br>
-      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=251"><img src="img/pv.jpg" alt="Jane" width="30%" style="border-radius: 50%"></a></center><br>
+      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=251"><img src="img/pv.jpg" alt="Jane" width="250px" height="250px" style="border-radius: 50%"></a></center><br>
       <div class="container">
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Dr. Pankaj Verma</h2>
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Assistant Professor, ECED</h2>
@@ -149,7 +149,7 @@
   <div class="column1">
     <div class="card">
      <br>
-      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=254"><img src="img/gs.jpg" alt="Jane" width="30%" style="border-radius: 50%"></a></center><br>
+      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=254"><img src="img/gs.jpg" alt="Jane" width="250px" height="250px" style="border-radius: 50%"></a></center><br>
       <div class="container">
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Dr. Gaurav Saini</h2>
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Assistant Professor, ECED</h2>
@@ -162,7 +162,7 @@
   <div class="column1">
     <div class="card">
      <br>
-      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=252"><img src="img/tns1.jpg" alt="Jane" width="30%" style="border-radius: 50%"></a></center><br>
+      <center><a href="https://www.nitkkr.ac.in/comp_faculty_details.php?idd=252"><img src="img/tns1.jpg" alt="Jane" width="250px" height="250px" style="border-radius: 50%"></a></center><br>
       <div class="container">
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Dr. T. N. Sasamal</h2>
         <h2 style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8">Assistant Professor, ECED</h2>
