--- a/keynote.html
+++ b/keynote.html
@@ -76,7 +76,7 @@
 				<div class="keynote-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white">WILL BE UPDATED</h1>
+						  <h1 class="text-white"><font size="+6">WILL BE UPDATED</font></h1>
 						</div>
 	
 						</div>
