--- a/callforp.html
+++ b/callforp.html
@@ -76,7 +76,7 @@
 				<div class="callforp-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white" style="font-size: 400%;">CALL FOR PAPERS</h1>
+						  <h1 class="text-white"><font size="+6">CALL FOR PAPERS</font></h1>
 						</div>
 	
 						</div>
@@ -87,7 +87,7 @@
 			<div class="welcome cf">
         <div class="intro">
          <br><br>
-          <font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+          <font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" >
 Original research works are invited from potential authors in the mentioned conference tracks and related areas of application. All the contributions should be of high quality, original and not published elsewhere or submitted for publication during the review period.<br>
 <br>
 
@@ -97,14 +97,11 @@ Authors are requested not to mention their names and affiliations on manuscripts
 <br><br>
 
 
-<BR><br>
-
-
 <H1 class="text-black" style="margin-left: 5%">SUBMISSION GUIDELINES</H1>
 
 <br><br>
 
-<font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.<br><br> 
+<font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" >Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.<br><br> 
 Literature reviews/survey papers will only be considered if they present a new perspective or clearly benefit the field. To be published, such papers must go beyond a review of the literature to define the field in a new way or highlight exciting new technologies or areas of research.<br><br>
 All submitted papers will be subjected to a “similarity test” by Turnitin Software. Papers achieving minimal similarity index will be examined and those that are deemed unacceptable will be rejected/withdrawn without a formal review.</p></font>
 
@@ -113,7 +110,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 <H1 class="text-black" style="margin-left: 5%">PLAGIARISM POLICY FOR IC4E-2020</H1>
 <BR><BR>
 
-<font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Authors are requested to kindly refrain from plagiarism in any form. Authors should submit their original and unpublished research work not under consideration for publication elsewhere. <b>Manuscript found to be plagiarized during any stage of review shall be rejected.</b> As per copyright transfer agreement, authors are deemed to be individually or collectively responsible for the content of manuscript published them.<br><br>
+<font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" >Authors are requested to kindly refrain from plagiarism in any form. Authors should submit their original and unpublished research work not under consideration for publication elsewhere. <b style="color: red">Manuscript found to be plagiarized during any stage of review shall be rejected.</b> As per copyright transfer agreement, authors are deemed to be individually or collectively responsible for the content of manuscript published them.<br><br>
 •  Submitted papers must comply with Springer plagiarism policy and procedures. <br><br>
 •  Any plagiarised text must not be from significant contribution part of paper. <br><br>
 •  Even plagiarism from a single source must not be more than 4%. <br><br>
@@ -132,7 +129,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 				<div class="conftracks-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white" style="font-size: 400%;">CONFERENCE TRACKS</h1>
+							<h1 class="text-white"><font size="+6">CONFERENCE TRACKS</font></h1>
 						</div>
 	
 						</div>
@@ -146,50 +143,50 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 			<div class="row">
   <div class="column" style="background-color:#aaa;"><br>
 	  <center><h2 class="text-black">INTELLIGENT ALGORITHMS: RECENT DEVELOPMENTS</h2><br><br><BR></center>
-    <p>&nbsp;&nbsp;🡢Artificial Intelligence<br><br>
-&nbsp;&nbsp;🡢Artificial Neural Networks<br><br>
-&nbsp;&nbsp;🡢Machine Learning and Deep learning<br><br>
-&nbsp;&nbsp;🡢Reinforcement learning <br><br>
-&nbsp;&nbsp;🡢Autonomous agents<br><br>
-&nbsp;&nbsp;🡢Swarm intelligence<br><br>
-&nbsp;&nbsp;🡢Fuzzy systems<br><br>
-&nbsp;&nbsp;🡢Computational intelligence  <br><br>
-&nbsp;&nbsp;🡢Nature inspired algorithms<br><br>
-&nbsp;&nbsp;🡢Cognitive computing <br><br>
-&nbsp;&nbsp;🡢Big data analysis and data mining<br><br>
-&nbsp;&nbsp;🡢Game theory <br><br>
-&nbsp;&nbsp;🡢Optimization<br><br>
-&nbsp;&nbsp;🡢Cluster Computing & Cloud Computing<br><br>
-&nbsp;&nbsp;🡢Smart Mobile Computing<br><br>
-&nbsp;&nbsp;🡢Soft Computing<br><br>
-&nbsp;&nbsp;🡢Quantum Computing, Scalable Computing<br><br>
-&nbsp;&nbsp;🡢Speech Recognition<br><br>
-&nbsp;&nbsp;🡢Data fusion<br><br>
-</p>
+    <font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.2" align="justify" >&nbsp;&nbsp;🡢 Artificial Intelligence<br><br>
+&nbsp;&nbsp;🡢 Artificial Neural Networks<br><br>
+&nbsp;&nbsp;🡢 Machine Learning and Deep learning<br><br>
+&nbsp;&nbsp;🡢 Reinforcement learning <br><br>
+&nbsp;&nbsp;🡢 Autonomous agents<br><br>
+&nbsp;&nbsp;🡢 Swarm intelligence<br><br>
+&nbsp;&nbsp;🡢 Fuzzy systems<br><br>
+&nbsp;&nbsp;🡢 Computational intelligence  <br><br>
+&nbsp;&nbsp;🡢 Nature inspired algorithms<br><br>
+&nbsp;&nbsp;🡢 Cognitive computing <br><br>
+&nbsp;&nbsp;🡢 Big data analysis and data mining<br><br>
+&nbsp;&nbsp;🡢 Game theory <br><br>
+&nbsp;&nbsp;🡢 Optimization<br><br>
+&nbsp;&nbsp;🡢 Cluster Computing & Cloud Computing<br><br>
+&nbsp;&nbsp;🡢 Smart Mobile Computing<br><br>
+&nbsp;&nbsp;🡢 Soft Computing<br><br>
+&nbsp;&nbsp;🡢 Quantum Computing, Scalable Computing<br><br>
+&nbsp;&nbsp;🡢 Speech Recognition<br><br>
+&nbsp;&nbsp;🡢 Data fusion<br><br>
+		</p></font>
   </div>
   <div class="column" style="background-color:#bbb;"><br>
     <center><h2 class="text-black">INTELLIGENT COMMUNICATION SYSTEMS</h2><br><br><BR></center>
-    <p>
-	    &nbsp;&nbsp;🡢Internet of Things (IoT)<br><br>
-&nbsp;&nbsp;🡢5G & 6G wireless communication  <br><br>
-&nbsp;&nbsp;🡢ICT infrastructure for smart Cities<br><br>
-&nbsp;&nbsp;🡢Intelligent transportation systems <br><br>
-&nbsp;&nbsp;🡢Digital Health, Telehealth<br><br>
-&nbsp;&nbsp;🡢Smart Cyber Security<br><br>
-&nbsp;&nbsp;🡢Smart devices and Embedded systems <br><br>
-&nbsp;&nbsp;🡢Cognitive Radio and Spectrum Management<br><br>
-&nbsp;&nbsp;🡢Software Defined Radio<br><br>
-&nbsp;&nbsp;🡢Photonics and Optical Communication<br><br>
-&nbsp;&nbsp;🡢Satellite and Space Communications<br><br>
-&nbsp;&nbsp;🡢Vehicular, Underground and Underwater Networks<br><br>
-&nbsp;&nbsp;🡢Network and Data Security<br><br>
-&nbsp;&nbsp;🡢Ad Hoc Networks<br><br>
-&nbsp;&nbsp;🡢Cryptography Algorithms<br><br>
-&nbsp;&nbsp;🡢Smart antenna, beamforming<br><br>
-&nbsp;&nbsp;🡢Signal Processing, Image and Video Processing<br><br>
-&nbsp;&nbsp;🡢Networking protocols <br><br>
+    <font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.2" align="justify" >
+	    &nbsp;&nbsp;🡢 Internet of Things (IoT)<br><br>
+&nbsp;&nbsp;🡢 5G & 6G wireless communication  <br><br>
+&nbsp;&nbsp;🡢 ICT infrastructure for smart Cities<br><br>
+&nbsp;&nbsp;🡢 Intelligent transportation systems <br><br>
+&nbsp;&nbsp;🡢 Digital Health, Telehealth<br><br>
+&nbsp;&nbsp;🡢 Smart Cyber Security<br><br>
+&nbsp;&nbsp;🡢 Smart devices and Embedded systems <br><br>
+&nbsp;&nbsp;🡢 Cognitive Radio and Spectrum Management<br><br>
+&nbsp;&nbsp;🡢 Software Defined Radio<br><br>
+&nbsp;&nbsp;🡢 Photonics and Optical Communication<br><br>
+&nbsp;&nbsp;🡢 Satellite and Space Communications<br><br>
+&nbsp;&nbsp;🡢 Vehicular, Underground and Underwater Networks<br><br>
+&nbsp;&nbsp;🡢 Network and Data Security<br><br>
+&nbsp;&nbsp;🡢 Ad Hoc Networks<br><br>
+&nbsp;&nbsp;🡢 Cryptography Algorithms<br><br>
+&nbsp;&nbsp;🡢 Smart antenna, beamforming<br><br>
+&nbsp;&nbsp;🡢 Signal Processing, Image and Video Processing<br><br>
+&nbsp;&nbsp;🡢 Networking protocols <br><br>
 
-</p>
+		</p></font>
   </div>
 </div>
 				
