--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 				<div class="about-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h2 class="text-white">ABOUT</h1>
+						  <h2 class="text-white"><font size="+6">ABOUT</font></h1>
 						</div>
 
 						</div>
@@ -92,17 +92,17 @@
 					<div class="intro">
 					 <br><br>
 					 <br><br>
-					 <center><img src="./img/nit1.jpg" style="width: 70%;height: 600px;"></center><br><br>
+					 <center><div class="image-wrapper"><img src="./img/nit1.jpg" style="width: 50%"></div></center><br><br>
 
-					  <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+					  <font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" >
 						<b>National Institute of Technology Kurukshetra</b>, Haryana is a premier Technical Institute of the region. The institute started working as Regional Engineering College, Kurukshetra in 1963. Like other Regional Engineering Colleges of India this institution too, had been a joint enterprise of the State and Central Governments. This Institute was conferred upon status of Deemed University  on June 26, 2002. Since then it has been renamed as National Institute of Technology, Kurukshetra.
 
 						The Institute started functioning in its present campus at Kurukshetra in 1965-66 with 120 students admitted in the first year of the Five-Year Courses of study for the B.Sc. (Engg.) Degree in Civil, Electrical and Mechanical Engineering. The annual intake was increased to 250 students in 1966-67. B.Sc. (Engg.) degree courses in Electronics and Communication Engineering was added in 1971-72. in 1967-68 M. Sc. (Engg.) degree courses in Electronics and Communication Engineering was added in 1971-72. In 1967-68 M. Sc. (Engg.) degree courses in Civil, Electrical and Mechanical Engineering and in 1971-72, a Postgraduate diploma in Scientific instrumentation were also started. In July, 1976 Part-Time M. Sc. ( Engg.) degree courses in Electronics and Communication Engineering and instrumentation were started. The First registration for the degree of Doctor of Philosophy in the Faculty of Engineering and Technology was made in July, 1967.
 			
 			</p></font>
 					  <br><br>
-					  <center><img src="./img/ece.jpg" style="width: 70%;height: 600px;"></center><br><br>
-					  <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+					  <center><div class="image-wrapper"><img src="./img/ece.jpg" style="width: 50%"></div></center><br><br>
+					  <font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" >
 						The branch of <b>Electronics and Communication Engineering</b> was started in the year 1971 under the aegis of Electrical Engineering Department. The “Department of Electronics and Communication Engineering” came into existence in the year 1973. In 1987, Computer Engineering branch was also started and the department was renamed as “Electronics, Communication and Computer Engineering”. In 2003, the department was again renamed as “Electronics and Communication Engineering” because of inception of “Computer Engineering Department” separately. The department started M.Tech. program in ECE and VLSI design in the year of 1987 and 2007, respectively. Presently, M.Tech. (VLSI Design) is being offered by the School of VLSI Design and Embedded Systems independently.
 			
 			</p></font>  
