--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 				<div class="about-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h2 class="text-white"><font size="+6">ABOUT</font></h1>
+						  <h2 class="text-white"><font size="+6">ABOUT NIT KURUKSHETRA</font></h1>
 						</div>
 
 						</div>
