--- a/kkr.html
+++ b/kkr.html
@@ -72,16 +72,17 @@
 			    </div>
 			  </header><!-- #header -->
 			<section class="generic-banner relative">	
-				<div class="container">
+			<div class="overlay overlay-bg"></div>
+				<div class="kkr-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-							<div class="generic-banner-content">
-							  <h2 class="text-white">UPDATED SOON</h2>
-</div>							
+							<h1 class="text-white"><font size="+6">WILL BE UPDATED</font></h1>
+						</div>
+	
 						</div>
 					</div>
-				</div>
-			</section>		
+				
+			</section>			
 			<!-- End banner Area -->
 		
 		<!-- About Generic Start -->
