--- a/kkr.html
+++ b/kkr.html
@@ -76,7 +76,7 @@
 				<div class="kkr-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-							<h1 class="text-white"><font size="+6">WILL BE UPDATED</font></h1>
+							<h1 class="text-white"><font size="+6">ABOUT KURUKSHETRA</font></h1>
 						</div>
 	
 						</div>
@@ -84,6 +84,30 @@
 				
 			</section>			
 			<!-- End banner Area -->
+			<section>
+			<br><br><br>
+				<center><h1 class="text-black" style="margin-left:5%;margin-right: 5%;line-height: normal">LOCAL TRAVEL</h1></center><br>
+			<br>
+			
+		
+			<font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:7%;margin-right: 5%;line-height:1.8" align="left" >
+				In the very first verse of Bhagwad-Gita</p></font> <br>
+				<center><h3 class="text-black">(धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः | मामकाः पाण्डवाश्चैव किम् अकुर्वत संजय ||)</h3></center><br><br>
+<font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:7%;margin-right: 5%;line-height:1.8" align="left" >
+	,Kurukshetra is described as DHARAMKSHETRA i.e. 'Region of righteousness'. Kurukshetra is a place of great historical and religious importance, revered all over the country for its sacred association with the Vedas and the Vedic Culture. It was here that the battle of Mahabharat was fought and Lord Krishna preached His Philosophy of 'KARMA' as enshrined in the Holy Bhagwad-Gita, to Arjuna at Jyotisar. According to Hindu mythology, Kurukshetra is spread over, a circuit of about 48 KOS, which includes a large number of holy places, temples and sacred tanks connected with the religious events/rituals, Mahabharat War and Kurus, the ancestor of Kauravas and Pandavs. Kurukshetra is intimately related to the Aryan civilization and its growth all along the sacred river Saraswati.<br><br>
+It is believed that the holy waters of all sacred rivers flow/converge into Kurukshetra's Sannehit Sarovar, at the time of Somavati 'Amavasya' and solar eclipse. It is believed that those who bath in the tanks in Kurukshetra go to heaven after death. Mahabharata states that one who dies at Kurukshetra attains salvation after death.<br><br>
+It is the land where the sage Manu penned his 'Manusmriti' and where learned 'rishis' compiled the Rig Veda and Sama Veda.
+Kurukshetra is named after King Kuru, who also performed a supreme sacrifice to bring prosperity to the land and his people.</p></font><br><br>
+<center><h3 class="text-black">ग्रह नक्षत्र ताराणां कालेन पतनाद~भयम् ||</h3><br></center>
+<center><h3 class="text-black">कुरुक्षेत्रे मृताणां च पतन नैव विद्यते ||</h3></center><br><br>
+
+<font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:7%;margin-right: 5%;line-height:1.8" align="justify" >"Come one and come all to have a glimpse of the sacred land of eternal bliss and to personally feel its religious and celestial fervour, heritage and ambience."
+Places and Pics. For more information please visit following website of Haryana tourism.<br>
+<a href="http://haryanatourism.gov.in/Kurukshetra-places-of-interest">http://haryanatourism.gov.in/Kurukshetra-places-of-interest</a><br><br>
+Nearby places to visit:<br>
+<a href="https://www.holidayiq.com/Kurukshetra-Weekend-Getaways-2110.html">https://www.holidayiq.com/Kurukshetra-Weekend-Getaways-2110.html</a></p></font>
+<br><br><Br>
+			</section>
 		
 		<!-- About Generic Start -->
 		<div class="main-wrapper">
