--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				          		<li><a href="about.html">ABOUT NIT KURUKSHETRA</a></li>
 				          		<li><a href="kkr.html">ABOUT KURUKSHETRA</a></li>
 				          		<li><a href="phtog.html">PHOTO GALLERY</a></li>				          		
-				          		<li><a href="places.html">PLACES OF INTEREST</a></li>
+				          		<li><a href="http://haryanatourism.gov.in/Kurukshetra-places-of-interest">PLACES OF INTEREST</a></li>
 				          	</ul>
 				          </li>
 				          <li><a href="contact.html">contact us</a></li>
