--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 				<div class="contact-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white">CONTACT US</h1>
+						  <h1 class="text-white"><font size="+6">CONTACT US</font></h1>
 						</div>
 	
 						</div>
