--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 			<section>
 				<br><br>
 				
-				<h2 class="text-black" align="center">Dr. Pankaj Verma<br>
+				<h2 class="text-black" align="center" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="center">Dr. Pankaj Verma<br>
 Assistant Professor, NIT Kurukshetra<br>
 Phone: +91-9588374320<br><br>
 Dr. T.N.Sasamal<br>
