--- a/phtog.html
+++ b/phtog.html
@@ -177,7 +177,7 @@
 </section>
 		</section>
 			
-			
+						<section><div class="footer"><p>© Copyrights IC4E 2020. All Rights Reserved</p></div></section>			
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
