--- a/callforp.html
+++ b/callforp.html
@@ -95,6 +95,8 @@ Original research works are invited from potential authors in the mentioned conf
 Authors are requested not to mention their names and affiliations on manuscripts, as for the purpose of double blind review. 
 
 <br><br>
+		  Download the Conference Brochure <a href="IC4E2020 Brochure.pdf">here</a>
+		  <br><br>
 
 
 <H1 class="text-black" style="margin-left: 5%">SUBMISSION GUIDELINES</H1>
