--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li class="menu-has-children"><a href="">Commitee</a>
+				          <li class="menu-has-children"><a href="">Committee</a>
 				            <ul>
-				              <li><a href="adcom.html">ADVISORY COMMITEE</a></li>
-				              <li><a href="orcom.html">ORGANIZING COMMITEE</a></li>
+				              <li><a href="adcom.html">ADVISORY COMMITTEE</a></li>
+				              <li><a href="orcom.html">ORGANIZING COMMITTEE</a></li>
 				              
 				            </ul>
 				          </li>
