--- a/callforp.html
+++ b/callforp.html
@@ -95,6 +95,8 @@ Original research works are invited from potential authors in the mentioned conf
 Authors are requested not to mention their names and affiliations on manuscripts, as for the purpose of double blind review. 
 
 <br><br>
+		  “All submitted papers must be in SPRINGER AIS format.” and <a  href="https://www.springer.com/us/authors-editors/book-authors-editors/resources-guidelines/book-manuscript-guidelines/manuscript-preparation/5636">Click here</a> to download AIS Paper template.<br><br>
+		  
 		  Download the Conference Brochure <a href="IC4E2020 Brochure.pdf">here</a>
 		  <br><br>
 
@@ -108,6 +110,7 @@ Literature reviews/survey papers will only be considered if they present a new p
 All submitted papers will be subjected to a “similarity test” by Turnitin Software. Papers achieving minimal similarity index will be examined and those that are deemed unacceptable will be rejected/withdrawn without a formal review.</p></font>
 
 <br><br>
+		 
 
 <H1 class="text-black" style="margin-left: 5%">PLAGIARISM POLICY FOR IC4E-2020</H1>
 <BR><BR>
@@ -120,7 +123,11 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 •  IC4E2020-TPC will look for all ethical standards in all best possible ways, further author will be responsible for any further plagiarism claims. <br><br>
 
 
-</p></font>
+</p><br><br>
+	Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.
+<br><br>
+
+IC4E2020 allows paper with a maximum of 8 pages.</font>
          
 <br><br><br><br>
         </div>  
