--- a/callforp.html
+++ b/callforp.html
@@ -95,7 +95,8 @@ Original research works are invited from potential authors in the mentioned conf
 Authors are requested not to mention their names and affiliations on manuscripts, as for the purpose of double blind review. 
 
 <br><br>
-		  “All submitted papers must be in SPRINGER AIS format.” and <a  href="https://www.springer.com/us/authors-editors/book-authors-editors/resources-guidelines/book-manuscript-guidelines/manuscript-preparation/5636">Click here</a> to download AIS Paper template.<br><br>
+		  “All submitted papers must be in SPRINGER AIS format.” <br><br>
+		  <a  href="https://www.springer.com/us/authors-editors/book-authors-editors/resources-guidelines/book-manuscript-guidelines/manuscript-preparation/5636">Click here</a> to download AIS Paper template.<br><br>
 		  
 		  Download the Conference Brochure <a href="IC4E2020 Brochure.pdf">here</a>
 		  <br><br>
@@ -107,7 +108,9 @@ Authors are requested not to mention their names and affiliations on manuscripts
 
 <font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" >Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.<br><br> 
 Literature reviews/survey papers will only be considered if they present a new perspective or clearly benefit the field. To be published, such papers must go beyond a review of the literature to define the field in a new way or highlight exciting new technologies or areas of research.<br><br>
-All submitted papers will be subjected to a “similarity test” by Turnitin Software. Papers achieving minimal similarity index will be examined and those that are deemed unacceptable will be rejected/withdrawn without a formal review.</p></font>
+All submitted papers will be subjected to a “similarity test” by Turnitin Software. Papers achieving minimal similarity index will be examined and those that are deemed unacceptable will be rejected/withdrawn without a formal review.<br><br>
+	Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.
+<br><br></p></font>
 
 <br><br>
 		 
@@ -124,8 +127,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 
 
 </p><br><br>
-	Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.
-<br><br>
+	
 
 IC4E2020 allows paper with a maximum of 8 pages.</font>
          
