--- a/callforp.html
+++ b/callforp.html
@@ -110,7 +110,10 @@ Authors are requested not to mention their names and affiliations on manuscripts
 Literature reviews/survey papers will only be considered if they present a new perspective or clearly benefit the field. To be published, such papers must go beyond a review of the literature to define the field in a new way or highlight exciting new technologies or areas of research.<br><br>
 All submitted papers will be subjected to a “similarity test” by Turnitin Software. Papers achieving minimal similarity index will be examined and those that are deemed unacceptable will be rejected/withdrawn without a formal review.<br><br>
 	Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.
-<br><br></p></font>
+<br><br>
+	
+
+IC4E2020 allows paper with a maximum of 8 pages.</p></font>
 
 <br><br>
 		 
@@ -126,10 +129,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 •  IC4E2020-TPC will look for all ethical standards in all best possible ways, further author will be responsible for any further plagiarism claims. <br><br>
 
 
-</p><br><br>
-	
-
-IC4E2020 allows paper with a maximum of 8 pages.</font>
+</p></font>
          
 <br><br><br><br>
         </div>  
